tests/miniJava/neg/000239_mutation.MiniJava
class java { public static void if Main ( String [ ] java ) { { } } }
